--- a/app/src/main/res/layout/activity_category_list.xml
+++ b/app/src/main/res/layout/activity_category_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAFAFA"
-    tools:context=".CategoryList">
+    tools:context=".CategoryListActivity">
 
 
     <android.support.v7.widget.Toolbar
@@ -17,7 +17,7 @@
         />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/CategoryList"
+        android:id="@+id/rvCategory"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize" />
