--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="etStyle" parent="Base.Widget.AppCompat.EditText">
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginTop">27dp</item>
+        <item name="android:layout_marginRight">15dp</item>
+    </style>
 
 
 </resources>
