Added a list of categories and cards to the screen.

--- a/app/src/main/res/layout/item_view_category.xml
+++ b/app/src/main/res/layout/item_view_category.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextClock
+    <TextView
         android:id="@+id/txtCategoryName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,9 +12,15 @@
         android:textSize="16sp"
         android:textColor="#333333"
         android:fontFamily="font/roboto"
-        tools:text="Супермаркеты"
+        android:text="Супермаркеты"
         android:maxLines="1"
         android:ellipsize="end"
+        android:layout_margin="15dp"
         />
 
-</FrameLayout>
+    <View
+
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#9B9B9B"/>
+</LinearLayout>
