--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -47,6 +47,13 @@
         android:textAllCaps="false"
         android:textColor="#9B9B9B" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#9B9B9B"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="17dp" />
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
