Приложение перестало вылетать, но при нажатии на кнопку "Сохранить", фото карточки так и не появилось.

--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#EDEDED"
     android:orientation="vertical"
-    tools:context=".AddCard">
+    tools:context=".AddCardActivity">
 
 
     <android.support.v7.widget.Toolbar
