--- a/app/src/main/res/layout/activity_card_list.xml
+++ b/app/src/main/res/layout/activity_card_list.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FAFAFA"
+        android:elevation="4dp"
         android:minHeight="?android:attr/actionBarSize">
 
     </android.support.v7.widget.Toolbar>
