--- a/app/src/main/res/layout/item_view_card.xml
+++ b/app/src/main/res/layout/item_view_card.xml
@@ -2,25 +2,19 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/Card"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_below="@id/toolbar"
-    android:layout_margin="10dp">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#EDEDED">
-
+    android:background="#EDEDED">
         <TextView
             android:id="@+id/txtNameCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="22dp"
             android:text="Лента"
             android:textColor="#333333"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:fontFamily="@font/roboto_medium"/>
 
         <android.support.v7.widget.RecyclerView
@@ -28,14 +22,14 @@
             android:layout_below="@+id/txtNameCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"/>
+            android:layout_marginTop="12dp"/>
 
         <TextView
             android:id="@+id/txtCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/rvPhotoCard"
-            android:layout_marginTop="9dp"
+            android:layout_marginLeft="17dp"
             android:text="Супермаркеты"
             android:textColor="#9B9B9B" />
 
@@ -45,10 +39,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/rvPhotoCard"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="9dp"
+            android:layout_marginRight="26sp"
             android:text="Скидка 10%"
             android:textColor="#009788" />
 
-    </RelativeLayout>
 
 </RelativeLayout>
