--- a/app/src/main/res/layout/item_view_photo_card.xml
+++ b/app/src/main/res/layout/item_view_photo_card.xml
@@ -4,25 +4,22 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
-    
+
     <android.support.v7.widget.CardView
         android:id="@+id/cvImageFront"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="16dp"
         app:cardPreventCornerOverlap="false"
         app:cardCornerRadius="5dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp">
 
         <ImageView
             android:id="@+id/imageCardFront"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitCenter"
-            android:maxHeight="112dp"
-            android:minHeight="112dp"
-            android:minWidth="180dp"
+            android:layout_width="180dp"
+            android:layout_height="112dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/card_1_front"
             />
 
