Ошибка при выгрузки карточки из БД.

--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -45,6 +45,8 @@ tools:context=".AddCardActivity">
         android:hint="Категория"
         android:drawableEnd="@drawable/shape"
         android:onClick="onCategoryClick"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
         />
 </android.support.design.widget.TextInputLayout>
 
