--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -47,6 +47,7 @@ tools:context=".AddCardActivity">
         android:onClick="onCategoryClick"
         android:textAlignment="textStart"
         android:textAllCaps="false"
+        android:textColor="#9B9B9B"
         />
 </android.support.design.widget.TextInputLayout>
 
