--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -66,6 +66,60 @@ tools:context=".AddCardActivity">
         android:inputType="number" />
 </android.support.design.widget.TextInputLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:id="@+id/flFrontPhoto"
+            android:clickable="true"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:focusable="true">
+
+            <ImageView
+                android:id="@+id/ivPhotoFront"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="4dp"
+                android:background="#EDEDED"/>
+
+            <ImageView
+                android:id="@+id/ivTakePhotoFrontCard"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:src="@drawable/ic_camera"
+                android:layout_gravity="center"/>
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/flBackPhoto"
+            android:clickable="true"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="100dp"
+            android:focusable="true">
+
+            <ImageView
+                android:id="@+id/ivPhotoBack"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                />
+
+            <ImageView
+                android:id="@+id/ivTakePhotoBackCard"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:src="@drawable/ic_camera"
+                android:layout_gravity="center"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
 
 <Button
     android:id="@+id/btnSave"
