--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -83,8 +83,8 @@ tools:context=".AddCardActivity">
                 android:id="@+id/ivPhotoFront"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="4dp"
-                android:background="#EDEDED"/>
+                android:background="#333333"
+                android:layout_margin="4dp"/>
 
             <ImageView
                 android:id="@+id/ivTakePhotoFrontCard"
@@ -108,6 +108,7 @@ tools:context=".AddCardActivity">
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
+                android:layout_margin="4dp"
                 />
 
             <ImageView
@@ -128,7 +129,7 @@ tools:context=".AddCardActivity">
     android:layout_margin="16dp"
     android:background="#009788"
     android:onClick="onAddCard"
-    android:text="Сохранить"
+    android:text="Сохранить карту"
     android:textColor="#FFFFFF"
     android:textSize="17sp">
 </Button>
