--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,5 +2,6 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <external-path
         name="my_images"
-        path="Android/data/goodline.info.department.cardbag/files/Pictures" />
+        path="Android/data/goodline.info.cardbag/files/Pictures" />
 </paths>
+
